# python_fast_api_template

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  plan.md  pyproject.toml  repomix.config.json  spec.md  todo.md
app/: main.py
app/api/routes/: todos.py
app/core/: config.py
app/core/exceptions/: handlers.py  todo_exceptions.py
app/models/: todo.py
app/services/: todo.py
tests/: conftest.py
tests/test_api/: test_todos.py
tests/test_services/: test_todo.py  test_todo_exceptions.py
